--- a/src/App.less
+++ b/src/App.less
@@ -1,5 +1,6 @@
 @import '~antd/dist/antd.less';
-@import '~antd-mobile/dist/antd-mobile.less';
+@import '~antd-mobile-v2/dist/antd-mobile.less';
+@import 'antd-mobile/es/global/global.css';
 /*base*/
 
   
