--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -1,9 +1,9 @@
-/* .titlebox{
+.shopname{
+    width: 100%;
     position:sticky;
     top:0px;
     z-index: 10;
-} */
-
+}
 .search-area {
     position: fixed;
     top: 0;
@@ -20,7 +20,7 @@
     top:0px;
     z-index: 10;
   }
-  .carousel{
+  .carousel-shop{
     position:sticky;
     top:44px;
     z-index: 10;
